סניפים ורבים לרבים סודר

--- a/OurNewProject/Views/Home/Gallery.cshtml
+++ b/OurNewProject/Views/Home/Gallery.cshtml
@@ -36,14 +36,15 @@
                 <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
             </a>
         </div>
+        
+
         <div class="w3-row-padding">
             <div class="w3-col s3 w3-container">
-                <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Aima');">
-                    <img src="https://usa.fage/sites/usa.fage/files/recipes/hero/Fage_Recipe_Headers_1200x500_0018_Fage_Oct19_Plain_Simple_Alt3_1575_RTF%20copy.jpg" alt="Nature" style="width:100%">
+                <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Sasa');">
+                    <img src="https://images.cookforyourlife.org/wp-content/uploads/2020/06/Chocolate-Whipped-Ice-Cream-shutterstock_1010248351.jpg" alt="Nature" style="width:100%">
                 </a>
             </div>
         </div><br>
-
 
 
 
@@ -80,8 +81,9 @@
             <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
         </div>
 
-        <div id="Aima" class="picture w3-display-container" style="display:none">
-            <img src="https://usa.fage/sites/usa.fage/files/recipes/hero/Fage_Recipe_Headers_1200x500_0018_Fage_Oct19_Plain_Simple_Alt3_1575_RTF%20copy.jpg" alt="Lights" style="width:100%">
+       
+        <div id="Sasa" class="picture w3-display-container" style="display:none">
+            <img src="https://images.cookforyourlife.org/wp-content/uploads/2020/06/Chocolate-Whipped-Ice-Cream-shutterstock_1010248351.jpg" alt="Lights" style="width:100%">
             <span onclick="this.parentElement.style.display='none'"
                   class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
             <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
@@ -89,5 +91,6 @@
 
         <script src="~/js/Gallery.js"></script>
 
+    </div>
 </body>
 </html>
