--- a/OurNewProject/Views/Home/YouKnow.cshtml
+++ b/OurNewProject/Views/Home/YouKnow.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hayadata";
 }
 
 
@@ -9,55 +9,45 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - OurNewProject</title>
-  @*  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
+    <link rel="stylesheet" href="~/css/Hayadata.css">
 
-    <link rel="stylesheet" href="~/css/hayadata.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    @*
-        <style>
-            body {
-                background-color: #ffc5d9 /*color of the background*/
-            }
-        </style>*@
+
 
     <header>
-        <div class="text-center"> <h1 class="display-4"> הידעת?  </h1></div>
+        <div class="text-center"> <h1 class="display-4" style=" font-family: 'Bona Nova', serif;color: #d6d6a2"> הידעת?  </h1></div>
 
     </header>
 
     <div>
         <h2>
-            <div class="text-center"> <h1 class="display-4"> כנראה שלא אז...  </h1></div>
+            <div class="text-center"> <h1 class="display-4" style="font-family: 'Bona Nova', serif; color: #d6d6a2"> כנראה שלא אז...  </h1></div>
         </h2>
     </div>
     <pre>
 
     </pre>
-    <div class="text-right">
+    <div class="text-right" >
         <div class="container">
             <div class="card">
                 <div class="card-header">
                     <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226864359_754623895272022_7310758689881530843_n.png?_nc_cat=104&ccb=1-3&_nc_sid=730e14&_nc_ohc=DYiZqtE_J-0AX9eoeD4&_nc_ht=scontent.ftlv6-1.fna&oh=d3d21cef9c8ca678161295768a76d477&oe=6108E11A" alt="rover" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-teal">
+                    <span style="font-family: 'Bona Nova', serif;" class="tag tag-teal">
                         איפה נולדתי?
                     </span>
-                    <h4 class="text-right">
+                    <h4  style="font-family: 'Bona Nova', serif;color: #090e46" class="text-center">
                         הגלידה הראשונה לא הומצאה באיטליה כמו שנהוג לחשוב, אלא בסין.
                         היא הייתה פשוט ערבוב של מיצי פירות עם קרח.
                     </h4>
-                    @*<p>An exploration into the trucks polarising design</p>*@
-                    @* <div class="user">
-                            <img src="https://i.postimg.cc/Hk7N71W2/user-1.jpg" alt="user 1" />
-                            <div class="user-info">
-                                <h5>Carrie Brewer</h5>
-                                <small>2h ago</small>
-                            </div>
-                        </div>*@
                 </div>
             </div>
             <div class="card">
@@ -68,11 +58,11 @@
                     <span class="tag tag-purple">
                         הדיאטה החלומית?
                     </span>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         נתקלנו כבר בדיאטת חלבונים ובדיאטת כרוב,
                         אבל אין ספק שהכי שמחנו לשמוע על דיאטת גלידה!
                     </h4>
-                    <h4> מי שדוגל בדיאטה הזאת בטח לא שמע שכוס אחת של גלידת וניל שווה 273 קלוריות.</h4>
+                    <h4 style="font-family: 'Bona Nova', serif;color: #090e46"> מי שדוגל בדיאטה הזאת בטח לא שמע שכוס אחת של גלידת וניל שווה 273 קלוריות.</h4>
 
                 </div>
             </div>
@@ -84,10 +74,10 @@
                     <span class="tag tag-pink">
                         למה דווקא גלידה?
                     </span>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         ממציא המילה "גלידה" הוא כמובן אליעזר בן-יהודה.
                     </h4>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         הוא יצר אותה על המשקל של המילה "לביבה" עם השורש ג.ל.ד המתייחס לנוזל שהתקשה.
                     </h4>
                 </div>
@@ -100,14 +90,14 @@
                     <span class="tag tag-pink">
                         איזה קור!
                     </span>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         חוויתם פעם "Brain freeze", או "קיפאון מוחי" כמו שעלינו לקרוא לזה בעברית?
 
                     </h4>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         אם כן, תדעו שזה קרה לכם בגלל שהגלידה נגעה בתקרת הפה שלכם, והטמפרטורה הנמוכה שלה כיווצה את כלי הדם באזור.
                     </h4>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         השחרור הפתאומי של כלי הדם האלה לאחר מכן הוא הגורם לכאב.
                     </h4>
                 </div>
@@ -120,15 +110,15 @@
                     <img src="https://glidatstrauss.co.il/wp-content/uploads/2019/01/Main_1920x505.png" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">
+                    <span class="tag tag-purple">
                         מהיכן הגיע הגביע?
                     </span>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         ביריד העולמי של סיינט לואיס בשנת 1904 אזלו לאחד מדוכני הגלידה כלי ההגשה,
                         והיה עליו לשתף פעולה עם דוכן שכן שמכרו בו מאפה וופל בצורת חרוט.
 
                     </h4>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         שיתוף הפעולה של השניים יצר את גביע הגלידה ממנו אנחנו נהנים עד היום.
                     </h4>
                 </div>
@@ -139,58 +129,19 @@
                     <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226788526_754623908605354_2388674748591718896_n.png?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=Ezab363Vp8IAX8qn3sx&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=4e192ad4ca76d2fa977a6585b1e78696&oe=6108AB71" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">
+                    <span class="tag tag-teal">
                         יום וחודש הגלידה
                     </span>
-                    <h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46">
                         מדינה שמייצרת את הכמות הגדולה ביותר של גלידה היא ארה"ב, וכנראה בגלל זה מציינים שם במהלך כל חודש יולי את חודש הגלידה הלאומי.
                     </h4>
-                    <h4> בנוסף, ה-4 בפברואר הוא יום ה"גלידה לארוחת בוקר".</h4>
-                    <h4> אה והאמריקאים כל כך אוהבים גלידה, שאת סיומה של מלחמת העולם השנייה הם חגגו באכילתה.</h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46"> בנוסף, ה-4 בפברואר הוא יום ה"גלידה לארוחת בוקר".</h4>
+                    <h4 class="text-center" style="font-family: 'Bona Nova', serif;color: #090e46"> אה והאמריקאים כל כך אוהבים גלידה, שאת סיומה של מלחמת העולם השנייה הם חגגו באכילתה.</h4>
                 </div>
             </div>
 
 
-            @*<div class="card">
-                <div class="card-header">
-                    <img src="https://prod-wolt-venue-images-cdn.wolt.com/5f43ac125060d8157b9a3c1f/019a6748-f68b-11ea-9984-1e09a232bab7_menu_2.jpg" alt="ballons" />
-                </div>
-                <div class="card-body">
-                    <span class="tag tag-purple">
-                        גלידה בטעם פירה
-                    </span>
-                    <h4>כשתוכניות בישול הפכו פופולריות בימיה המוקדמים של הטלוויזיה, בחלק מהמתכונים נהגו להחליף את הגלידה במחית תפוחי-אדמה. </h4>
-                    <h4> למה? </h4>
-                    <h4>מכיוון שהגלידה נמסה מהר מדי בגלל התאורה וזה לא הצטלם כל כך טוב. </h4>
-
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://prod-wolt-venue-images-cdn.wolt.com/5f43ac125060d8157b9a3c1f/019a6748-f68b-11ea-9984-1e09a232bab7_menu_2.jpg" alt="ballons" />
-                </div>
-                <div class="card-body">
-                    <span class="tag tag-purple">
-                        שם מקור?
-                    </span>
-                    <h4> במקור נקראה הגלידה באנגלית "Cream ice" ! </h4>
-
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-header">
-                    <img src="https://www.colbonews.co.il/wp-content/uploads/2018/09/c275d1d8cc344914602ce4aee6213e2b-e1536750971623.jpg" alt="rover" />
-                </div>
-                <div class="card-body">
-                    <span class="tag tag-teal">
-                        נולדו עם כפית של זהב בפה
-                    </span>
-                    <h4> טועמי גלידה טועמים את הגלידה בעזרת כפית מזהב, כדי שלא ירגישו שום סוג של טעם לוואי שעלול להיות בכפית רגילה.</h4>
-
-                </div>
-            </div>*@
-
+           
         </div>
     </div>
 </body>
