--- a/OurNewProject/Views/Users/Register.cshtml
+++ b/OurNewProject/Views/Users/Register.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-<link rel="stylesheet" href="~/css/login-logout.css" />
+<link rel="stylesheet" href="~/css/log-out.css" />
 
 
 <div class="wrapper fadeInDown">
