--- a/OurNewProject/Views/Branches/TheBranch.cshtml
+++ b/OurNewProject/Views/Branches/TheBranch.cshtml
@@ -8,49 +8,79 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@1&display=swap" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 
 <html>
 <body>
 
-    <div class="w3-container">
-        <h2>Tabs</h2>
-        <p>Tabs are perfect for single page web applications, or for web pages capable of displaying different subjects. Click on the links below.</p>
-    </div>
+    <!-- Grid -->
+    <div class="w3-row-padding" style="font-family: 'Bona Nova', serif;" id="plans">
+        <div class="w3-center w3-padding-64">
+            <h3>Pricing Plans</h3>
+            <p>Choose a pricing plan that fits your needs.</p>
+        </div>
 
-    <div class="w3-bar w3-black">
+
 
         @foreach (var item in Model)
         {
-            <button class="w3-bar-item w3-button" onclick="openCity(@Html.DisplayFor(modelItem => item.Name))">@Html.DisplayFor(modelItem => item.Name)</button>
+            <div class="w3-third w3-margin-bottom">
+                <ul class="w3-ul w3-border w3-center w3-hover-shadow">
+                    <li class="w3-jumbo text-white w3-xlarge w3-padding-32" style="background-color: #d6d6a2">@Html.DisplayFor(modelItem => item.Name)</li>
+                    <li class="w3-padding-16"><b> @item.Phone</b></li>
+                    <li class="w3-padding-16"><b>  @item.Hours</b></li>
+                    <li class="w3-padding-16"><b>@item.Address</b> </li>
+
+                    <li class="w3-padding-16">
+                        <h2 class="w3-wide">$ 10</h2>
+                        <span class="w3-opacity">per month</span>
+                    </li>
+                    <li class="w3-light-grey w3-padding-24">
+                        @* <button class="w3-button w3-black w3-padding-large">Sign Up</button>*@
+                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button text-white" style="background-color: #090e46">Open Modal</button>
+
+                    </li>
+                </ul>
+            </div>
         }
-    </div>
 
 
-    @foreach (var item in Model)
-    {
 
-        <div id=@Html.DisplayFor(modelItem => item.Name) class="w3-container city">
-            <h2>@Html.DisplayFor(modelItem => item.Name)</h2>
-            <p>@Html.DisplayFor(modelItem => item.Name)</p>
+
+
+
+        <div class="w3-container">
+
+            <div id="id01" class="w3-modal">
+                <div class="w3-modal-content w3-card-4">
+                    <header class="w3-container" style="background-color: #c66b95">
+                        <span onclick="document.getElementById('id01').style.display='none'"
+                              class="w3-button w3-display-topright">&times;</span>
+                        <h2 class="text-center ">הכתובת שלנו </h2>
+                    </header>
+                    <div class="w3-container">
+                        <p>Some text..</p>
+                        <p>Some text..</p>
+                    </div>
+                    <footer class="w3-container" style="background-color: #c66b95
+">
+                        <p class="text-center">נשמח לראותכם</p>
+                    </footer>
+                </div>
+            </div>
         </div>
 
-        
-    }
-    <div id="London" class="w3-container city">
-        <h2>London</h2>
-        <p>London is the capital city of England.</p>
+
+
+
     </div>
 
-    <script>
-        function openCity(cityName) {
-            var i;
-            var x = document.getElementsByClassName("city");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            document.getElementById(cityName).style.display = "block";
-        }
-    </script>
 
 </body>
 </html>
