--- a/OurNewProject/Views/Home/About.cshtml
+++ b/OurNewProject/Views/Home/About.cshtml
@@ -6,34 +6,40 @@
 
 <head>
     <link rel="stylesheet" href="~/css/About.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@0;1&display=swap" rel="stylesheet">
+   
+
 </head>
 
-<div class="text-center">
+<div class="text-center" style=" font-family: 'Bona Nova' , serif;">
 
     <u1>
         <div>
-            <br />
-            <div class="textabout">
-                <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/227185688_754645218603223_4954627745840666676_n.png?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=BSzaJlF7c2kAX-3Oyjd&_nc_oc=AQmUTYYIRu1x02cF7tbkq9s53l0httkk3KZGI7aS4JiVNzXHlRPgZYUhhNnvtV5McvA&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=412ed13d2d7bf2f7c67e074b8fd0d0fd&oe=6108E88D" alt="Wano Logo" style="width:491px; height:500px">
+            
+                <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/227185688_754645218603223_4954627745840666676_n.png?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=BSzaJlF7c2kAX-3Oyjd&_nc_oc=AQmUTYYIRu1x02cF7tbkq9s53l0httkk3KZGI7aS4JiVNzXHlRPgZYUhhNnvtV5McvA&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=412ed13d2d7bf2f7c67e074b8fd0d0fd&oe=6108E88D" style="width:491px; height:500px">
                 <br />
                 <div class="card">
-                    <div class="card-body">
-                        <span class="tag tag-purple">
-                            IZEI
-                        </span>
-                        <h4>
-                            ברוכים הבאים לגלידת איזי (IZEI),רשת הגלידות החדשה בישראל ! <br />
+                    <div >
+                        <br />
+                        
+                        
+                        <h3 style="font-family: 'Bona Nova', serif; color: #090e46">
+                            ברוכים הבאים לגלידת איזי (IZEI) ,רשת הגלידות החדשה בישראל ! <br />
                             הנכם מוזמנים להנות מחווית טעמים חדשה וייחודית בישראל ! <br />
                             אם אתה יוצא לדייט, יוצא עם חברים או סתם יש לך חשק בלילה למתוק <br />
                             IZEI זה המקום האוליטמטבי בשבילך. <br />
                             נשמח לראותכם בין אורחינו.
-                        </h4>
+                        </h3>
 
                     </div>
 
-                    <h4>
+                    <h2 style="font-family: 'Bona Nova', serif;  color: #090e46 ">
                         הגעתם לפה ? כנראה שאתם במקום הנכון כי לא כל יום ניתן הצצה רשמית לסניף הבית  שלנו !
-                    </h4>
+                    </h2>
                     <pre>
     
                     </pre>
@@ -45,43 +51,40 @@
                         <br />
 
 
-
-
-
-
-
-
-
-
-                        @*ברוכים הבאים לגלידת איזי (IZEI),רשת הגלידות החדשה בישראל ! <br />
-            הנכם מוזמנים להנות מחווית טעמים חדשה וייחודית בישראל ! <br />
-            אם אתה יוצא לדייט, יוצא עם חברים או סתם יש לך חשק בלילה למתוק <br />
-            IZEI זה המקום האוליטמטבי בשבילך. <br />
-            נשמח לראותכם בין אורחינו.*@
-
-
-
                         <br /><br />
-                        @* <b>  For Reservation <a asp-area="" asp-controller="Home" asp-action="Reservation">Click Here</a>.</b>*@
                         <br /><br />
-                        הסניף שבו הכל התחיל (סניף הבית),מומלץ להגיע עם הזמנת מקום מראש :<br />
-                        אלי ויזל 10,ראשון לציון <br />
+                              <h4  style=" font-family: 'Bona Nova', serif;color: #090e46">
+                                  הסניף שבו הכל התחיל (סניף הבית),מומלץ להגיע עם הזמנת מקום מראש
+                                  
+                              </h4>
+                              <h4 style="        font-family: 'Bona Nova', serif;color: #090e46">
+                                  אלי ויזל 10,ראשון לציון
+                              </h4>
+                        <br />
+                         <br />
                         <br /><br />
 
 
-                        <!--Weather Widget-->
-                        <a class="weatherwidget-io" href="https://forecast7.com/en/32d0934d78/tel-aviv-yafo/" data-label_1="RISHON-LEZION" data-label_2="WEATHER" data-theme="salmon">TEL AVIV WEATHER</a>
-                        <script>
-                            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-                        </script>
 
 
                         <!--Google Maps-->
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.6900954119606!2d34.77224248575843!3d31.969303132036828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f69a0c1b27%3A0x9df60473d5201ec3!2z15DXnNeZINeV15nXltecIDEwLCDXqNeQ16nXldefINec16bXmdeV158!5e0!3m2!1siw!2sil!4v1627570605134!5m2!1siw!2sil" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
+                        <br /><br />
+
+                    
+
+                        <a class="weatherwidget-io" href="https://forecast7.com/en/31d9734d79/rishon-letsiyon/" data-label_1="RISHON LEZION" data-label_2="WEATHER" data-theme="original">RISHON LEZION WEATHER</a>
+                        <script>
+                            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
+                        </script>
+                        <br />
+
                     </div>
-                    <br />
                 </div>
+            <br />
+            <br />
+         </div>
     </u1>
 </div>
 
