--- a/OurNewProject/Views/Suppliers/Details.cshtml
+++ b/OurNewProject/Views/Suppliers/Details.cshtml
@@ -22,6 +22,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Phone)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.myBranches)
+        </dt>
         <dd class="col-sm-10">
             <ul>
                 @foreach (var a in Model.myBranches)
