--- a/OurNewProject/wwwroot/css/log-out.css
+++ b/OurNewProject/wwwroot/css/log-out.css
@@ -77,7 +77,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset] {
-    background-color: rgb(39 173 188 / 0.44);
+    background-color: #d6d6a2;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -99,7 +99,7 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
     input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-        background-color: rgb(39 173 188 / 0.44);
+        background-color: #d6d6a2;
     }
 
     input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
@@ -111,7 +111,7 @@ input[type=button], input[type=submit], input[type=reset] {
     }
 
 input[type=text] {
-    background-color: rgb(39 173 188 / 0.07);
+    background-color: #d6d6a2;
     border: none;
     color: #0d0d0d;
     padding: 15px 32px;
@@ -132,7 +132,7 @@ input[type=text] {
 }
 
     input[type=text]:focus {
-        background-color: rgb(39 173 188 / 0.44);
+        background-color: #090e46;
         border-bottom: 2px solid #5fbae9;
     }
 
